package domain.entities.serviceoverview;

public class ServiceStatusId {
    private int id;

    public ServiceStatusId(int id) {
        this.id = id;
    }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }
}
